# AcquireSand

./: .gitignore  Jenkinsfile  README.md  design.puml  docker-compose-prod.yml  docker-compose.yml  nginx-local.conf  nginx-remote.conf
angular/: Dockerfile  package.json
angular/src/: index.html  styles.css
angular/src/app/: app.component.spec.ts
api/: Dockerfile  fullchain.pem
api/src/: server.js
commonfiles/: gpudb.json
containers/angular/: Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
containers/angular/src/: index.html  manifest.webmanifest  site.webmanifest  styles.css
containers/angular/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
containers/api/: Dockerfile  package-lock.json  package.json  privkey.pem
containers/api/src/: server.js
containers/certbot/: Dockerfile
containers/chromedriver/: Dockerfile
containers/ebayapi/: .eslintrc.yml  Dockerfile  index.js  package-lock.json  package.json  test.js
containers/postgres-init/: Dockerfile  run.sh
containers/python/: Dockerfile  GPUCompare.py  gpudb.json  requirements.txt
containers/rust/: Cargo.toml  Dockerfile  outtime
containers/rust/src/: main.rs
dockerstorage/angular/: Dockerfile  angular.json  karma.conf.js
dockerstorage/api/: package.json
dockerstorage/commonfiles/: gpudb.json  outtime.json
local/: docker-compose.yml  nginx.conf
production/: docker-compose.yml
python/: README.md  gpuimportlist.txt
rust/: Cargo.toml  Dockerfile
(+20 files in other folders)
